--- a/CotD/Config/DefaultEngine.ini
+++ b/CotD/Config/DefaultEngine.ini
@@ -14,6 +14,7 @@ DefaultPlatformService=Null
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.MotionBlur=False
+r.VirtualTextures=True
 
 [/Script/Engine.LocalPlayer]
 AspectRatioAxisConstraint=AspectRatio_MaintainXFOV
